[project]
name = "comfyui_joytag"
description = "JoyTag is a state of the art AI vision model for tagging images, with a focus on sex positivity and inclusivity. It uses the Danbooru tagging schema, but works across a wide range of images, from hand drawn to photographic.\nDownload the weight and put it under checkpoints: [a/https://huggingface.co/fancyfeast/joytag/tree/main](https://huggingface.co/fancyfeast/joytag/tree/main)"
version = "1.0.0"
license = "LICENSE"
dependencies = ["# torch>=2.0.1,<3.0.0", "transformers>=4.36.2", "# torchvision>=0.15.2", "einops>=0.7.0", "safetensors>=0.4.1", "pillow>=9.4.0"]

[project.urls]
Repository = "https://github.com/StartHua/Comfyui_joytag"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_joytag"
Icon = ""
